--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
 </head>
 <body>
-    <p>just a test :)</p>
+    <header>
+        <div class="app-name">
+            </h3><a href="#">PLACEHOLDER ☀️</a></h3>
+        </div>
+        <nav>
+          <a href="about.html">About</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Plan your next trip ☀️</h1>
+                <h6>Tired of gloomy weather? Find the <u>sunniest</u> destinations for your weekend trip!</h6>
+            </div>
+            <hr>
+            <div class="current-location">
+                <label for="current-location">I'm located in: </label>  
+                <input type="text" id="current-location" placeholder="Your current location" />
+            </div>
+            <div class="date-range">
+                <label for="start-date">Select Dates:</label>
+                <div class="input-field">
+                    <input type="date" id="start-date" name="start-date">
+                    <span>to</span>
+                    <input type="date" id="end-date" name="end-date">
+                </div> 
+                <!-- look into Datepicker / find a better calendar! (ideally airbnb style - one calendar to choose the range)-->
+                <!-- even more ideally - a calendar that allows only e.g. 14 days in advance (a la calendly)-->
+            </div>
+
+            <div class="search-button">
+                <button class="btn btn-warning rounded-pill px-3" type="button">Destinations</button>
+            </div>
+        </section>
+
+
+        <!-- TESTIMONIALS Section :) -->
+        <!-- <section class="home-testimonial">
+            <div class="container-fluid">
+                <div class="row d-flex justify-content-center testimonial-pos">
+                    <div class="col-md-12 pt-4 d-flex justify-content-center">
+                        <h3>Testimonials</h3>
+                    </div>
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <h2>Explore the students experience</h2>
+                    </div>
+                </div>
+                <section class="home-testimonial-bottom">
+                    <div class="container testimonial-inner">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-md-4 style-3">
+                                <div class="tour-item ">
+                                    <div class="tour-desc bg-white">
+                                        <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
+                                        <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/6625914/pexels-photo-6625914.jpeg" alt=""></div>
+                                        <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
+                                        <div class="link-position d-flex justify-content-center">Student</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 style-3">
+                                <div class="tour-item ">
+                                    <div class="tour-desc bg-white">
+                                        <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
+                                        <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
+                                        <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
+                                        <div class="link-position d-flex justify-content-center">Student</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 style-3">
+                                <div class="tour-item ">
+                                    <div class="tour-desc bg-white">
+                                        <div class="tour-text color-grey-3 text-center">&ldquo;At this School, our mission is to balance a rigorous comprehensive college preparatory curriculum with healthy social and emotional development.&rdquo;</div>
+                                        <div class="d-flex justify-content-center pt-2 pb-2"><img class="tm-people" src="https://images.pexels.com/photos/4946604/pexels-photo-4946604.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""></div>
+                                        <div class="link-name d-flex justify-content-center">Balbir Kaur</div>
+                                        <div class="link-position d-flex justify-content-center">Student</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </section>
+            </div>
+        </section> -->
+      
+        
+    </main>
+
+    <footer>
+        <p>&copy; 2024 PLACEHOLDER</p>
+    </footer>
+
+
+
+
+    <!-- <div class="container">
+        Plan your trip
+    </div> -->
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
