--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon-16x16.png') }}">
+    <link rel="apple-touch-icon" sizes="192x192" href="{{ url_for('static', filename='images/favicon-192x192.png') }}">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
 </head>
@@ -12,7 +16,7 @@
             </h3><a href="#">PLACEHOLDER ☀️</a></h3>
         </div>
         <nav>
-          <a href="about.html">About</a>
+          <a href="{{ url_for('about') }}">About</a>
         </nav>
     </header>
 
@@ -24,8 +28,10 @@
             </div>
             <hr>
             <div class="current-location">
-                <label for="current-location">I'm located in: </label>  
-                <input type="text" id="current-location" placeholder="Your current location" />
+                <div class="input-group mb-3">
+                    <label for="current-location" class="input-group-text">I'm located in: </label>  
+                    <input type="text" id="current-location" class="form-control" placeholder="Your current location" aria-label="Your current location" />
+                </div>
             </div>
             <div class="date-range">
                 <label for="start-date">Select Dates:</label>
@@ -39,7 +45,7 @@
             </div>
 
             <div class="search-button">
-                <button class="btn btn-warning rounded-pill px-3" type="button">Destinations</button>
+                <button class="btn btn-warning rounded-pill px-3" type="button">Explore</button>
             </div>
         </section>
 
