add date range sorting functionality to suggested locations

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     </div> 
                 </div>
                 <div class="search-button">
-                    <button id="explore-button" class="btn btn-warning rounded-pill px-3" type="button">Explore</button>
+                    <button id="explore-button" class="btn btn-warning rounded-pill px-3" type="submit">Explore</button>
                 </div>
             </form>
         </section>
