--- a/templates/results.html
+++ b/templates/results.html
@@ -33,9 +33,7 @@
                             <th>City</th>
                             <th>Average Sunshine (hours/day)</th>
                             <th>Total Sunshine (hours)</th>
-                            {% if show_distance %}
                             <th>Distance from {{ current_location }} (km)</th>
-                            {% endif %}
                         </tr>
                     </thead>
                     <tbody>
@@ -45,9 +43,7 @@
                             <td>{{ city.city }}</td>
                             <td>{{ city.avg_sunshine }}</td>
                             <td>{{ city.total_sunshine }}</td>
-                            {% if show_distance %}
-                            <td>{{ city.distance if city.distance else 'N/A' }}</td>
-                            {% endif %}
+                            <td>{{ city.distance if city.distance != 'N/A' else 'N/A' }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
