--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,25 @@
                     </div>
                 </div>
                 <datalist id="cities-list"></datalist>
+                <div class="preferences">
+                    <label for="preferences">Preferences:</label>
+                    <div>
+                        <input type="checkbox" id="island" name="preferences" value="island">
+                        <label for="island">Island</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="capital" name="preferences" value="capital">
+                        <label for="capital">Capital City</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="eu" name="preferences" value="eu">
+                        <label for="eu">EU</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="schengen" name="preferences" value="schengen">
+                        <label for="schengen">Schengen</label>
+                    </div>
+                </div>
                 <div class="date-range">
                     <label for="date-range">Select Dates:</label>
                     <div class="input-field">
@@ -122,7 +141,7 @@
     document.addEventListener('DOMContentLoaded', function() {
         const exploreButton = document.getElementById('explore-button');
         const searchForm = document.getElementById('search-form');
-    
+
         exploreButton.addEventListener('click', function(e) {
             e.preventDefault();
             if (searchForm.checkValidity()) {
@@ -130,15 +149,23 @@
                 const startDate = dateRange[0];
                 const endDate = dateRange[1] || dateRange[0];
                 const currentLocation = document.getElementById('current-location').value;
+                const preferences = Array.from(document.querySelectorAll('input[name="preferences"]:checked')).map(checkbox => checkbox.value);
                 
-                window.location.href = `/results?start_date=${startDate}&end_date=${endDate}&current_location=${encodeURIComponent(currentLocation)}`;
+                const queryParams = new URLSearchParams({
+                    start_date: startDate,
+                    end_date: endDate,
+                    current_location: currentLocation,
+                    preferences: preferences.join(',')
+                });
+                
+                window.location.href = `/results?${queryParams.toString()}`;
             } else {
                 searchForm.reportValidity();
             }
         });
     });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eHz" crossorigin="anonymous"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         const dateRangeInput = document.getElementById('date-range');
