--- a/templates/results.html
+++ b/templates/results.html
@@ -30,7 +30,7 @@
                     <thead>
                         <tr>
                             <th>Rank</th>
-                            <th>City</th>
+                            <th>Destination</th>
                             <th>Average Sunshine (hours/day)</th>
                             <th>Total Sunshine (hours)</th>
                             <th>Distance from {{ current_location }} (km)</th>
