--- a/templates/results.html
+++ b/templates/results.html
@@ -35,6 +35,7 @@
                             <th>Total Sunshine (hours)</th>
                             <th>Distance from {{ current_location }} (km)</th>
                             <th>Flights</th>
+                            <th>Stay</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -51,6 +52,9 @@
                                 {% else %}
                                     <span class="text-muted">No flight search available</span>
                                 {% endif %}
+                            </td>
+                            <td>
+                                <a href="{{ city.booking_link }}" target="_blank" class="btn btn-success btn-sm">Find Hotels</a>
                             </td>
                         </tr>
                         {% endfor %}
